@@ -34,5 +34,6 @@ FINAL_TASK_STATES = [
 FINAL_TRANSITIONS = [
     'task-transition-open-cancelled',
     'task-transition-open-tested-and-closed',
+    'task-transition-in-progress-tested-and-closed',
     'task-transition-resolved-tested-and-closed',
     'task-transition-planned-skipped']
